# text_minning

./: .gitignore  NLP_Obituary_Presentation.pptx  NLP_Obituary_Presentation_v2.pptx  NLP_Obituary_Presentation_v3.pptx  analysis.ipynb  cues.txt  dataprocessing.ipynb  eda.ipynb  final_project.ipynb  main.py  obituaris_8_1_FINAL.csv  obituary_parser.py  preprocessing.ipynb  pyproject.toml
final_project_text_mining/: analysis.ipynb  cues.txt  eda.ipynb  obituary_parser.py  preprocessing.ipynb  scraping.ipynb
