[project]
name = "text-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dateparser>=1.3.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "pyautogui>=0.9.54",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.4",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]